--- a/benchmark/training/image_classification/requirements.txt
+++ b/benchmark/training/image_classification/requirements.txt
@@ -33,7 +33,7 @@ requests==2.25.1
 requests-oauthlib==1.3.0
 rsa==4.7.1
 scikit-learn==0.24.1
-scipy==1.6.0
+scipy
 six==1.15.0
 tensorflow==2.16.1
 termcolor==1.1.0
