--- a/benchmark/training/image_classification/requirements.txt
+++ b/benchmark/training/image_classification/requirements.txt
@@ -35,7 +35,7 @@ rsa==4.7.1
 scikit-learn==0.24.1
 scipy
 six==1.15.0
-tensorflow
+tensorflow==2.16.1
 termcolor==1.1.0
 threadpoolctl==2.1.0
 typing-extensions==3.7.4.3
