--- a/benchmark/training/image_classification/requirements.txt
+++ b/benchmark/training/image_classification/requirements.txt
@@ -18,7 +18,7 @@ Keras-Preprocessing==1.1.2
 kiwisolver==1.3.1
 Markdown==3.3.3
 matplotlib==3.3.4
-numpy==1.22.1
+numpy>=1.23.5,<2.0.0
 oauthlib==3.1.0
 opencv-python==4.8.1.78
 opt-einsum==3.3.0
