--- a/benchmark/training/image_classification/requirements.txt
+++ b/benchmark/training/image_classification/requirements.txt
@@ -23,7 +23,7 @@ oauthlib==3.1.0
 opencv-python==4.8.1.78
 opt-einsum==3.3.0
 Pillow==8.1.0
-protobuf==3.14.0
+protobuf>=3.20.3,<5.0.0dev
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pyparsing==2.4.7
