--- a/benchmark/training/image_classification/requirements.txt
+++ b/benchmark/training/image_classification/requirements.txt
@@ -9,7 +9,7 @@ gast==0.3.3
 google-auth==1.27.0
 google-auth-oauthlib==0.4.2
 google-pasta==0.2.0
-grpcio==1.32.0
+grpcio>=1.48.2,<2.0.0
 h5py==3.10.0
 idna==2.10
 imageio==2.9.0
