--- a/benchmark/training/image_classification/requirements.txt
+++ b/benchmark/training/image_classification/requirements.txt
@@ -32,7 +32,7 @@ PyYAML==5.3.1
 requests==2.25.1
 requests-oauthlib==1.3.0
 rsa==4.7.1
-scikit-learn==0.24.1
+scikit-learn
 scipy
 six==1.15.0
 tensorflow==2.16.1
