--- a/benchmark/training/image_classification/requirements.txt
+++ b/benchmark/training/image_classification/requirements.txt
@@ -22,7 +22,7 @@ numpy>=1.23.5,<2.0.0
 oauthlib==3.1.0
 opencv-python==4.8.1.78
 opt-einsum==3.3.0
-Pillow==8.1.0
+Pillow
 protobuf>=3.20.3,<5.0.0dev
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
